--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Quiz App</title>
   </head>
-  <body>
+  <body style="background-color: rgb(177, 139, 93);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
